Style.css
body {
    margin: 0;
    padding: 0;
    display: grid;
    grid-template-columns: 1fr 2fr 1fr 2fr 1fr;
    background-color: #303030;
}

h1 {
    color: white;
    padding-left: 25px;
}

header {
    grid-column-start: 1;
    grid-column-end: 6;
    background-color: #424242;
}

.Spacer {
    grid-column-start: 1;
    grid-column-end: 6;
    height: 100px;
}

ul {
    list-style: none;
    background-color: #424242;
    border-radius: 10px;
    height: fit-content;
    margin: 0;
    padding: 0;
}

li {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    color: white;
}

#SP {
    grid-column: 2;
}

#Coop {
    grid-column: 4;
}

